004_miscellaneous/001_services/001_separate-services/subject-approval-service/etc/kubernetes/beta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subject-approval-deployment
  namespace: teaching-action
  labels:
    app: subject-approval-api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subject-approval-api-service
      tier: backend
      stage: beta
      type: microservice
      track: stable
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: subject-approval-api-service
        tier: backend
        stage: beta
        type: microservice
        track: stable
    spec:
      restartPolicy: Always
      containers:
        - name: subject-approval-api-service
          image: API_IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
